updated pycharm settings