@@ -1,18 +1,50 @@
-pycharm-community-2018.3.7
-
-### plugins:
-
-git integration
-Requirements
-Yaml
-
-# help/edit custom VM options
-
--Xms256m
--Xmx512m
+---
+layout: page
+title: Pycharm settings
+permalink: /pycharm/
+---
+# custom VM options
 -Dproject.tree.structure.show.url=false
--XX:ReservedCodeCacheSize=240m
--XX:+UseConcMarkSweepGC
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
--XX:-OmitStackTraceInFastThrow
+
+# PyCharm Settings
+
+## Appearance
+* Drag and drop with ALT
+
+## Keymap
+* Window/editor tab/reopened closed - cmnd+shift+T
+
+## Editor
+### General
+* change font size with wheel
+* turn off drag and drop
+* show virtual space at bottom
+* ensure line feed at file end on Save
+* turn off breadcrumbs
+* turn off code folding
+
+### Font
+* font - Menlo
+* size - 18
+
+### color scheme
+* Material ONe Dark
+
+### inspections
+* turn off HTML, JSON
+
+### Emmet
+* turn off Emmet
+
+## Plugins
+### bundled
+* git
+* intellilang
+* machine code
+* markdown
+* shell
+* terminal
+* Yaml
+### external
+* Requirements
+* power mode2
